--- a/hotels.html
+++ b/hotels.html
@@ -172,56 +172,73 @@
             <a class="hotels__card-link" href="#">
               <img class="hotels__card-img" src="images/content/hotel-1.jpg" alt="Гостиница Amara Resort & Spa">
             </a>
+
+
             <a class="hotels__title-link" href="#">
               <h3 class="hotels__card-title">Amara Resort & Spa</h3>
             </a>
               <span class="hotels__card-type">Гостиница</span>
               <b class="hotels__card-price">От 4000 ₽</b>
-            <a href="#" class="hotels__card-buttom">Подробнее</a>
+
+
+
+            <a href="#" class="hotels__card-button">Подробнее</a>
             <button class="hotels__favorite">В избранное</button>
             <span class="hotels__rating">Рейтинг: 8,5</span>
+
           </li>
 
-          <li class="hotels-card">
+          <li class="hotels__card">
             <a class="hotels__card-link" href="#">
               <img class="hotels__card-img" src="images/content/hotel-2.jpg" alt="Мотель Desert Quail Inn">
             </a>
+
             <a class="hotels__title-link" href="#">
              <h3 class="hotels__card-title">Desert Quail Inn</h3>
             </a>
               <span class="hotels__card-type">Мотель</span>
               <b class="hotels__card-price">От 3000 ₽</b>
-            <a href="#" class="hotels__card-buttom">Подробнее</a>
+
+
+            <a href="#" class="hotels__card-button">Подробнее</a>
             <button class="hotels__favorite">В избранное</button>
             <span class="hotels__rating">Рейтинг: 8,9</span>
+
           </li>
 
-          <li class="hotels-card">
+          <li class="hotels__card">
             <a class="hotels__card-link" href="#">
               <img class="hotels__card-img" src="images/content/hotel-3.jpg" alt="Апартаменты Villas at Poco Diablo">
             </a>
+
             <a class="hotels__title-link" href="#">
               <h3 class="hotels__card-title">Villas at Poco Diablo</h3>
             </a>
               <span class="hotels__card-type">Апартаменты</span>
               <b class="hotels__card-price">От 2000 ₽</b>
-            <a href="#" class="hotels__card-buttom">Подробнее</a>
+
+
+            <a href="#" class="hotels__card-button">Подробнее</a>
             <button class="hotels__favorite-active">В избранном</button>
             <span class="hotels__rating">Рейтинг: 9,2</span>
+
           </li>
 
-          <li class="hotels-card">
+          <li class="hotels__card">
             <a class="hotels__card-link" href="#">
               <img class="hotels__card-img" src="images/content/hotel-4.jpg" alt="Гостиница GreenTree Inn">
             </a>
+
             <a class="hotels__title-link" href="#">
               <h3 class="hotels__card-title">GreenTree Inn</h3>
             </a>
               <span class="hotels__card-type">Гостиница</span>
               <b class="hotels__card-price">От 3000 ₽</b>
-            <a href="#" class="hotels__card-buttom">Подробнее</a>
+
+            <a href="#" class="hotels__card-button">Подробнее</a>
             <button class="hotels__favorite">В избранноe</button>
             <span class="hotels__rating">Рейтинг: 9,2</span>
+
           </li>
         </ul>
 
