--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Меню -->
     <header class="header">
-      <div class="page-footer">
+      <div class="page-header">
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
@@ -29,11 +29,19 @@
         <ul class="navigation-list navigation-user" >
           <li class="navigation__item-user">
             <a class="navigation__link-user" href="#">
+              <svg class="navigation__icon" aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18 16.5L14.3 12.8C15.3 11.5 16 9.8 16 7.9C16 3.5 12.4 -0.1 8 -0.1C3.6 -0.1 0 3.6 0 8C0 12.4 3.6 16 8 16C9.8 16 11.5 15.4 12.9 14.3L16.6 18L18 16.5ZM8 14C4.7 14 2 11.3 2 8C2 4.7 4.7 2 8 2C11.3 2 14 4.7 14 8C14 11.3 11.3 14 8 14Z" fill="black"/>
+                </svg>
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation__item-user">
             <a class="navigation__link-user" href="#">
+              <svg class="navigation__icon-heart" aria-hidden="true" focusable="false" width="31" height="27" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.9 27C8.6 27 8.3 26.9 8.1 26.6C2.7 20.5 1.4 19.1 1.1 18.7C0.4 17.8 0 16.6 0 15.4C0 12.4 2.4 10 5.5 10C6.8 10 8 10.5 9 11.3C10 10.5 11.3 10 12.5 10C15.5 10 18 12.4 18 15.4C18 16.7 17.5 17.9 16.7 18.8L9.7 26.7C9.5 26.9 9.3 27 8.9 27ZM2.9 17.5C3.2 17.9 6.4 21.5 9 24.4L15.2 17.4C15.7 16.9 15.9 16.2 15.9 15.4C15.9 13.6 14.4 12.1 12.6 12.1C11.6 12.1 10.6 12.6 9.9 13.4C9.6 13.7 9.3 13.8 9 13.8C8.7 13.8 8.4 13.6 8.2 13.4C7.5 12.6 6.5 12.1 5.5 12.1C3.7 12.1 2.2 13.6 2.2 15.4C2.1 16.3 2.5 17 2.9 17.5C2.8 17.5 2.8 17.5 2.9 17.5Z" fill="black"/>
+                <path d="M31 9.5C31 14.7467 26.7467 19 21.5 19C16.2533 19 12 14.7467 12 9.5C12 4.25329 16.2533 0 21.5 0C26.7467 0 31 4.25329 31 9.5Z" fill="#7DB54F"/>
+                <path d="M17.6308 12.26H19.0308V7.42L19.1308 6.83L18.7308 7.3L17.6308 8.09L17.2508 7.58L19.4508 5.88H19.8108V12.26H21.1808V13H17.6308V12.26ZM25.46 7.59C25.46 7.94333 25.3933 8.30667 25.26 8.68C25.1333 9.04667 24.9633 9.41667 24.75 9.79C24.5433 10.1633 24.31 10.53 24.05 10.89C23.79 11.2433 23.53 11.58 23.27 11.9L22.78 12.33V12.37L23.42 12.26H25.6V13H21.62V12.71C21.7667 12.5567 21.9433 12.3667 22.15 12.14C22.3567 11.9133 22.57 11.6633 22.79 11.39C23.0167 11.11 23.2367 10.8167 23.45 10.51C23.67 10.1967 23.8667 9.88 24.04 9.56C24.22 9.24 24.3633 8.92333 24.47 8.61C24.5767 8.29667 24.63 8 24.63 7.72C24.63 7.39333 24.5367 7.12333 24.35 6.91C24.1633 6.69 23.88 6.58 23.5 6.58C23.2467 6.58 23 6.63333 22.76 6.74C22.52 6.84 22.3133 6.95667 22.14 7.09L21.81 6.52C22.0433 6.32 22.32 6.16333 22.64 6.05C22.96 5.93667 23.3033 5.88 23.67 5.88C23.9567 5.88 24.21 5.92333 24.43 6.01C24.65 6.09 24.8367 6.20667 24.99 6.36C25.1433 6.51333 25.26 6.69667 25.34 6.91C25.42 7.11667 25.46 7.34333 25.46 7.59Z" fill="white"/>
+                </svg>
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -52,7 +60,7 @@
       </div>
       <div class="welcome__text">
         <h1 class="welcome__title">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h1>
-        <p class="welcome__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <p class="welcome__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </div>
 
 
@@ -102,17 +110,17 @@
 
 
           <li class="advantage__item advantage__lions">
-            <h3 class="advantage__item-title">Небольшая площадь</h3>
+            <h3 class="advantage__item-title">Небольшая<br> площадь</h3>
               <p class="advantage__item-number">— №3 —</p>
               <p class="advantage__item-description">Все достопримечательности<br> находятся очень близко</p>
           </li>
           <li class="advantage__item advantage__road">
-            <h3 class="advantage__item-title">Красивая дорога</h3>
+            <h3 class="advantage__item-title">Красивая<br> дорога</h3>
               <p class="advantage__item-number">— №4 —</p>
               <p class="advantage__item-description">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
           </li>
           <li class="advantage__item advantage__tourists">
-            <h3 class="advantage__item-title">Мало туристов</h3>
+            <h3 class="advantage__item-title">Мало<br> туристов</h3>
               <p class="advantage__item-number">— №5 —</p>
               <p class="advantage__item-description">Большинство едет в Гранд<br> Каньон и толпится там</p>
           </li>
@@ -151,19 +159,26 @@
         <ul class="social__list">
           <li class="button__twitter">
            <a class="twitter" href="https://twitter.com/htmlacademy_ru">
+            <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.6 0.200056C13.4 -0.299944 14.8 0.500056 15.4 1.40006C16.1 1.20006 16.8 0.900056 17.5 0.700056C17.5 1.60006 16.9 2.20006 16.6 2.50006C17.3 2.60006 18 1.90006 18 1.90006C17.8 2.90006 16.9 3.70006 16.3 3.90006C16.1 10.7001 13 15.1001 5.7 15.0001C5.1 15.0001 5.8 15.0001 5.2 15.0001C4.8 15.0001 0.8 14.5001 0 13.1001C2.4 13.3001 4.1 12.7001 5 11.9001C4 11.6001 2.1 11.5001 1.8 9.00006C2.2 9.10006 2.4 9.20006 3.1 9.10006C1.8 8.30006 0.4 7.50006 0.5 5.30006C0.8 5.60006 1.6 5.80006 1.9 5.80006C1.1 5.60006 -0.2 2.50006 0.9 0.900056C2.8 2.80006 4.9 4.50006 8.5 4.70006C8.7 2.30006 9.7 0.800056 11.6 0.200056Z" fill="#83B3D3"/>
+              </svg>
             <span class="visually-hidden">Твиттер</span>
            </a>
           </li>
           <li class="button__facebook">
            <a class="facebook" href="https://www.facebook.com/htmlacademy">
             <span class="visually-hidden">Фейсбук</span>
-            <!-- <img src="images/facebook.svg" class="button__facebook" alt="Фейсбук"> -->
+            <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7 0C4.8 0 3 1.8 3 4V6H0V10H3V18H7V10H10V6H7V4H10V0H7Z" fill="#83B3D3"/>
+              </svg>
            </a>
           </li>
           <li class="button__youtube">
            <a class="youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
             <span class="visually-hidden">Ютуб</span>
-            <!-- <img src="images/youtube.svg" class="button__youtube" alt="Ютуб"> -->
+            <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M17 0H2.9C1.2 0 0 1.5 0 3.2V12.7C0 14.5 1.2 16 2.9 16H17.2C18.7 16 20.1 14.5 20.1 12.8V3.2C19.9 1.5 18.7 0 17 0ZM7 11.8V4.2L13.7 8L7 11.8Z" fill="#83B3D3"/>
+            </svg>
            </a>
           </li>
         </ul>
