--- a/hotels.html
+++ b/hotels.html
@@ -154,25 +154,46 @@
         <form class="sorting__type">
           <label class="visually-hidden" for="sorting" hidden>Сортировка</label>
           <select class="select__control" id="sorting" name="sorting">
-            <option value="cheap">Сначала дешёвое</option>
-            <option value="expensive">Сначала дорогое</option>
-            <option value="popular">Сначала популярное</option>
+            <option value="cheap">Сначала дешевые</option>
+            <option value="expensive">Сначала дорогие</option>
+            <option value="popular">Сначала популярные</option>
           </select>
-          <!-- <button class="visually-hidden" type="submit">Отсортировать</button> -->
         </form>
         <ul class="buttons__sorting">
           <li class="buttons__sorting-item">
-        <a href="#" class="button__tile-link">
+        <a href="#" class="buttons__sorting-link">
+          <svg class="button__sorting" aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4 0H0V6H4V0Z" fill="black"/>
+            <path d="M16 0H12V6H16V0Z" fill="black"/>
+            <path d="M10 0H6V6H10V0Z" fill="black"/>
+            <path d="M4 8H0V14H4V8Z" fill="black"/>
+            <path d="M16 8H12V14H16V8Z" fill="black"/>
+            <path d="M10 8H6V14H10V8Z" fill="black"/>
+            </svg>
           <span class="visually-hidden">Показать карточки</span>
         </a>
       </li>
       <li class="buttons__sorting-item">
-        <a href="#" class="button__slide-link">
+        <a href="#" class="buttons__sorting-link">
+          <svg class="button__sorting" aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M16 12H0V14H16V12Z" fill="black"/>
+            <path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black"/>
+            </svg>
           <span class="visually-hidden">Показать слайды</span>
         </a>
       </li>
       <li class="buttons__sorting-item">
-        <a href="#" class="button__list-link">
+        <a href="#" class="buttons__sorting-link">
+          <svg class="button__sorting" aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M2 0H0V2H2V0Z" fill="black"/>
+            <path d="M16 0H4V2H16V0Z" fill="black"/>
+            <path d="M2 4H0V6H2V4Z" fill="black"/>
+            <path d="M16 4H4V6H16V4Z" fill="black"/>
+            <path d="M2 8H0V10H2V8Z" fill="black"/>
+            <path d="M16 8H4V10H16V8Z" fill="black"/>
+            <path d="M2 12H0V14H2V12Z" fill="black"/>
+            <path d="M16 12H4V14H16V12Z" fill="black"/>
+            </svg>
           <span class="visually-hidden">Показать список</span>
         </a>
       </li>
