--- a/hotels.html
+++ b/hotels.html
@@ -29,23 +29,24 @@
           <li class="navigation__item-user">
             <a class="navigation__link-user" href="#">
               <svg class="navigation__icon" aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M18 16.5L14.3 12.8C15.3 11.5 16 9.8 16 7.9C16 3.5 12.4 -0.1 8 -0.1C3.6 -0.1 0 3.6 0 8C0 12.4 3.6 16 8 16C9.8 16 11.5 15.4 12.9 14.3L16.6 18L18 16.5ZM8 14C4.7 14 2 11.3 2 8C2 4.7 4.7 2 8 2C11.3 2 14 4.7 14 8C14 11.3 11.3 14 8 14Z" fill="black"/>
+                <path d="M18 16.5L14.3 12.8C15.3 11.5 16 9.8 16 7.9C16 3.5 12.4 -0.1 8 -0.1C3.6 -0.1 0 3.6 0 8C0 12.4 3.6 16 8 16C9.8 16 11.5 15.4 12.9 14.3L16.6 18L18 16.5ZM8 14C4.7 14 2 11.3 2 8C2 4.7 4.7 2 8 2C11.3 2 14 4.7 14 8C14 11.3 11.3 14 8 14Z"/>
                 </svg>
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation__item-user">
             <a class="navigation__link-user" href="#">
-              <svg class="navigation__icon-heart" aria-hidden="true" focusable="false" width="31" height="27" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8.9 27C8.6 27 8.3 26.9 8.1 26.6C2.7 20.5 1.4 19.1 1.1 18.7C0.4 17.8 0 16.6 0 15.4C0 12.4 2.4 10 5.5 10C6.8 10 8 10.5 9 11.3C10 10.5 11.3 10 12.5 10C15.5 10 18 12.4 18 15.4C18 16.7 17.5 17.9 16.7 18.8L9.7 26.7C9.5 26.9 9.3 27 8.9 27ZM2.9 17.5C3.2 17.9 6.4 21.5 9 24.4L15.2 17.4C15.7 16.9 15.9 16.2 15.9 15.4C15.9 13.6 14.4 12.1 12.6 12.1C11.6 12.1 10.6 12.6 9.9 13.4C9.6 13.7 9.3 13.8 9 13.8C8.7 13.8 8.4 13.6 8.2 13.4C7.5 12.6 6.5 12.1 5.5 12.1C3.7 12.1 2.2 13.6 2.2 15.4C2.1 16.3 2.5 17 2.9 17.5C2.8 17.5 2.8 17.5 2.9 17.5Z" fill="black"/>
+              <svg class="navigation__icon-hert" aria-hidden="true" focusable="false" width="31" height="27" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.9 27C8.6 27 8.3 26.9 8.1 26.6C2.7 20.5 1.4 19.1 1.1 18.7C0.4 17.8 0 16.6 0 15.4C0 12.4 2.4 10 5.5 10C6.8 10 8 10.5 9 11.3C10 10.5 11.3 10 12.5 10C15.5 10 18 12.4 18 15.4C18 16.7 17.5 17.9 16.7 18.8L9.7 26.7C9.5 26.9 9.3 27 8.9 27ZM2.9 17.5C3.2 17.9 6.4 21.5 9 24.4L15.2 17.4C15.7 16.9 15.9 16.2 15.9 15.4C15.9 13.6 14.4 12.1 12.6 12.1C11.6 12.1 10.6 12.6 9.9 13.4C9.6 13.7 9.3 13.8 9 13.8C8.7 13.8 8.4 13.6 8.2 13.4C7.5 12.6 6.5 12.1 5.5 12.1C3.7 12.1 2.2 13.6 2.2 15.4C2.1 16.3 2.5 17 2.9 17.5C2.8 17.5 2.8 17.5 2.9 17.5Z"/>
                 <path d="M31 9.5C31 14.7467 26.7467 19 21.5 19C16.2533 19 12 14.7467 12 9.5C12 4.25329 16.2533 0 21.5 0C26.7467 0 31 4.25329 31 9.5Z" fill="#7DB54F"/>
                 <path d="M17.6308 12.26H19.0308V7.42L19.1308 6.83L18.7308 7.3L17.6308 8.09L17.2508 7.58L19.4508 5.88H19.8108V12.26H21.1808V13H17.6308V12.26ZM25.46 7.59C25.46 7.94333 25.3933 8.30667 25.26 8.68C25.1333 9.04667 24.9633 9.41667 24.75 9.79C24.5433 10.1633 24.31 10.53 24.05 10.89C23.79 11.2433 23.53 11.58 23.27 11.9L22.78 12.33V12.37L23.42 12.26H25.6V13H21.62V12.71C21.7667 12.5567 21.9433 12.3667 22.15 12.14C22.3567 11.9133 22.57 11.6633 22.79 11.39C23.0167 11.11 23.2367 10.8167 23.45 10.51C23.67 10.1967 23.8667 9.88 24.04 9.56C24.22 9.24 24.3633 8.92333 24.47 8.61C24.5767 8.29667 24.63 8 24.63 7.72C24.63 7.39333 24.5367 7.12333 24.35 6.91C24.1633 6.69 23.88 6.58 23.5 6.58C23.2467 6.58 23 6.63333 22.76 6.74C22.52 6.84 22.3133 6.95667 22.14 7.09L21.81 6.52C22.0433 6.32 22.32 6.16333 22.64 6.05C22.96 5.93667 23.3033 5.88 23.67 5.88C23.9567 5.88 24.21 5.92333 24.43 6.01C24.65 6.09 24.8367 6.20667 24.99 6.36C25.1433 6.51333 25.26 6.69667 25.34 6.91C25.42 7.11667 25.46 7.34333 25.46 7.59Z" fill="white"/>
-                </svg>
+              </svg>
+
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
           <li class="navigation__item-user">
-            <a class="navigation__link-button" href="#">Хочу сюда</a>
+            <a class="navigation__link-button button" href="#">Хочу сюда</a>
           </li>
         </ul>
       </nav>
@@ -143,7 +144,7 @@
          </label>
           </fieldset>
           <div class="hotels__buttoms">
-        <button class="button__apply" type="submit">Применить</button>
+        <button class="button__apply button__blue" type="submit">Применить</button>
         <button class="button__reset" type="reset">Сбросить</button>
       </div>
         </form>
@@ -183,7 +184,7 @@
         </a>
       </li>
       <li class="buttons__sorting-item">
-        <a href="#" class="buttons__sorting-link">
+        <a href="#" class="buttons__sorting-link button__active">
           <svg class="button__sorting" aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M2 0H0V2H2V0Z" fill="black"/>
             <path d="M16 0H4V2H16V0Z" fill="black"/>
@@ -217,8 +218,8 @@
 
 
 
-            <a href="#" class="hotels__card-button">Подробнее</a>
-            <button class="hotels__favorite">В избранное</button>
+            <a href="#" class="hotels__card-button button">Подробнее</a>
+            <button class="hotels__favorite button__blue">В избранное</button>
             <span class="hotels__rating">Рейтинг: 8,5</span>
             <img class="stars" src="images/stars-4.svg" alt="">
 
@@ -236,8 +237,8 @@
               <b class="hotels__card-price">От 3000 ₽</b>
 
 
-            <a href="#" class="hotels__card-button">Подробнее</a>
-            <button class="hotels__favorite">В избранное</button>
+            <a href="#" class="hotels__card-button button">Подробнее</a>
+            <button class="hotels__favorite button__blue">В избранное</button>
             <span class="hotels__rating">Рейтинг: 8,9</span>
             <img class="stars" src="images/stars-3.svg" alt="">
 
@@ -255,7 +256,7 @@
               <b class="hotels__card-price">От 2000 ₽</b>
 
 
-            <a href="#" class="hotels__card-button">Подробнее</a>
+            <a href="#" class="hotels__card-button button">Подробнее</a>
             <button class="hotels__favorite-active">В избранном</button>
             <span class="hotels__rating">Рейтинг: 9,2</span>
             <img class="stars" src="images/stars-2.svg" alt="">
@@ -273,8 +274,8 @@
               <span class="hotels__card-type">Гостиница</span>
               <b class="hotels__card-price">От 3000 ₽</b>
 
-            <a href="#" class="hotels__card-button">Подробнее</a>
-            <button class="hotels__favorite">В избранноe</button>
+            <a href="#" class="hotels__card-button button">Подробнее</a>
+            <button class="hotels__favorite button__blue">В избранноe</button>
             <span class="hotels__rating">Рейтинг: 9,2</span>
             <img class="stars" src="images/stars-2.svg" alt="">
 
@@ -282,7 +283,7 @@
         </ul>
 
 
-        <button class="botton__show-more">Загрузить еще</button>
+        <button class="botton__show-more button__blue">Загрузить еще</button>
       </div>
 
         <!-- переключение страниц -->
@@ -292,19 +293,19 @@
             <a class="pagination__link pagination__current" href="#">1</a>
           </li>
           <li class="pagination__item">
-            <a class="pagination__link" href="#">2</a>
+            <a class="pagination__link button__blue" href="#">2</a>
           </li>
           <li class="pagination__item">
-            <a class="pagination__link" href="#">3</a>
+            <a class="pagination__link button__blue" href="#">3</a>
           </li>
           <li class="pagination__item">
-            <a class="pagination__link" href="#">4</a>
+            <a class="pagination__link button__blue" href="#">4</a>
           </li>
           <li class="pagination__item">
-            <a class="pagination__link" href="#">...</a>
+            <a class="pagination__link button__blue" href="#">...</a>
           </li>
           <li class="pagination__item">
-              <a class="pagination__link" href="#">10</a>
+              <a class="pagination__link button__blue" href="#">10</a>
           </li>
         </ul>
 
@@ -326,7 +327,7 @@
         <p class="mailing__description-hotels">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
         <div class="mailing__input-container">
           <input type="text" name="e-mail" placeholder="Ваш e-mail" class="mailing__input">
-          <button type="submit" class="mailing__button">подписаться</button>
+          <button type="submit" class="mailing__button button__blue">подписаться</button>
         </div>
       </form>
     </section>
@@ -337,46 +338,60 @@
   <!-- footer -->
   <footer class="footer">
     <div class="footer__container">
-      <section class="socials">
-        <h3 class="visually-hidden" hidden>Социальные сети</h3>
-        <ul class="social__list">
-          <li class="button__social">
-            <a class="twitter" href="https://twitter.com/htmlacademy_ru">
-             <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-               <path d="M11.6 0.200056C13.4 -0.299944 14.8 0.500056 15.4 1.40006C16.1 1.20006 16.8 0.900056 17.5 0.700056C17.5 1.60006 16.9 2.20006 16.6 2.50006C17.3 2.60006 18 1.90006 18 1.90006C17.8 2.90006 16.9 3.70006 16.3 3.90006C16.1 10.7001 13 15.1001 5.7 15.0001C5.1 15.0001 5.8 15.0001 5.2 15.0001C4.8 15.0001 0.8 14.5001 0 13.1001C2.4 13.3001 4.1 12.7001 5 11.9001C4 11.6001 2.1 11.5001 1.8 9.00006C2.2 9.10006 2.4 9.20006 3.1 9.10006C1.8 8.30006 0.4 7.50006 0.5 5.30006C0.8 5.60006 1.6 5.80006 1.9 5.80006C1.1 5.60006 -0.2 2.50006 0.9 0.900056C2.8 2.80006 4.9 4.50006 8.5 4.70006C8.7 2.30006 9.7 0.800056 11.6 0.200056Z" fill="#83B3D3"/>
-               </svg>
-             <span class="visually-hidden">Твиттер</span>
-            </a>
-           </li>
-           <li class="button__social">
-            <a class="facebook" href="https://www.facebook.com/htmlacademy">
-             <span class="visually-hidden">Фейсбук</span>
-             <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-               <path d="M7 0C4.8 0 3 1.8 3 4V6H0V10H3V18H7V10H10V6H7V4H10V0H7Z" fill="#83B3D3"/>
-               </svg>
-            </a>
-           </li>
-           <li class="button__social">
-            <a class="youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
-             <span class="visually-hidden">Ютуб</span>
-             <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-               <path d="M17 0H2.9C1.2 0 0 1.5 0 3.2V12.7C0 14.5 1.2 16 2.9 16H17.2C18.7 16 20.1 14.5 20.1 12.8V3.2C19.9 1.5 18.7 0 17 0ZM7 11.8V4.2L13.7 8L7 11.8Z" fill="#83B3D3"/>
-             </svg>
-            </a>
-           </li>
-        </ul>
-      </section>
+    <section class="socials">
+      <h3 class="visually-hidden" hidden>Социальные сети</h3>
+      <ul class="social__list">
+        <li class="button__twitter">
+         <a class="twitter" href="https://twitter.com/htmlacademy_ru">
+          <svg class="social__icon" aria-hidden="true" focusable="false" width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M11.6 0.200056C13.4 -0.299944 14.8 0.500056 15.4 1.40006C16.1 1.20006 16.8 0.900056 17.5 0.700056C17.5 1.60006 16.9 2.20006 16.6 2.50006C17.3 2.60006 18 1.90006 18 1.90006C17.8 2.90006 16.9 3.70006 16.3 3.90006C16.1 10.7001 13 15.1001 5.7 15.0001C5.1 15.0001 5.8 15.0001 5.2 15.0001C4.8 15.0001 0.8 14.5001 0 13.1001C2.4 13.3001 4.1 12.7001 5 11.9001C4 11.6001 2.1 11.5001 1.8 9.00006C2.2 9.10006 2.4 9.20006 3.1 9.10006C1.8 8.30006 0.4 7.50006 0.5 5.30006C0.8 5.60006 1.6 5.80006 1.9 5.80006C1.1 5.60006 -0.2 2.50006 0.9 0.900056C2.8 2.80006 4.9 4.50006 8.5 4.70006C8.7 2.30006 9.7 0.800056 11.6 0.200056Z"/>
+            </svg>
+          <span class="visually-hidden">Твиттер</span>
+         </a>
+        </li>
+        <li class="button__facebook">
+         <a class="facebook" href="https://www.facebook.com/htmlacademy">
+          <span class="visually-hidden">Фейсбук</span>
+          <svg class="social__icon" aria-hidden="true" focusable="false" width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7 0C4.8 0 3 1.8 3 4V6H0V10H3V18H7V10H10V6H7V4H10V0H7Z"/>
+            </svg>
+         </a>
+        </li>
+        <li class="button__youtube">
+         <a class="youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
+          <span class="visually-hidden">Ютуб</span>
+          <svg class="social__icon" aria-hidden="true" focusable="false" width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M17 0H2.9C1.2 0 0 1.5 0 3.2V12.7C0 14.5 1.2 16 2.9 16H17.2C18.7 16 20.1 14.5 20.1 12.8V3.2C19.9 1.5 18.7 0 17 0ZM7 11.8V4.2L13.7 8L7 11.8Z"/>
+          </svg>
+         </a>
+        </li>
+      </ul>
+    </section>
 
     <section class="telephone">
      <h3 class="visually-hidden" hidden>Телефон</h3>
      <a href="tel:+78128121212" class="telephone">+7 (812) 812-12-12</a>
    </section>
    <section class="academy">
-     <h3 class="visually-hidden" hidden>Контакты академии</h3>
-     <a href="https://htmlacademy.ru/" class="academy__link">
-     <img class="academy__logo" src="images/logo_academy.svg" alt="logo-academy">
-     </a>
-   </section>
+    <h3 class="visually-hidden" hidden>Контакты академии</h3>
+    <a href="https://htmlacademy.ru/" class="academy__link">
+     <svg class="academy__icon" aria-hidden="true" focusable="false" width="115" height="34" viewBox="0 0 115 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+       <path d="M0 12.9V15.5H2.5V12.9H0Z"/>
+       <path d="M11.6 4.5C10 4.5 8.80002 5.2 8.00002 6.2H7.90002V0H5.90002V15.5H7.90002V10.2C7.90002 8.1 9.20002 6.6 11.2 6.6C13 6.6 14.1 8 14.1 9.8V15.5H16.1V9.4C16.2 6.4 14.3 4.5 11.6 4.5Z"/>
+       <path d="M26.6 4.79998H21.8V1.09998H19.8V4.89998H17.9V6.89998H19.8V12.9C19.8 14.6 20.8 15.6 22.5 15.6H26.6V13.6H22.9C22.2 13.6 21.8 13.2 21.8 12.5V6.79998H26.6V4.79998Z"/>
+       <path d="M41.1 4.59998C39.5 4.59998 38.2 5.39998 37.6 6.69998H37.5C36.9 5.49998 35.7 4.59998 34.1 4.59998C32.7 4.59998 31.6 5.39998 31 6.39998H30.9V4.79998H29V15.4H31V9.99998C31 7.99998 32 6.49998 33.6 6.49998C35.1 6.49998 36 7.49998 36 9.09998V15.4H38V9.79998C38 7.39998 39.4 6.49998 40.6 6.49998C42.1 6.49998 43 7.49998 43 9.09998V15.4H45V8.89998C45.1 6.39998 43.6 4.59998 41.1 4.59998Z"/>
+       <path d="M47.8 12.7C47.8 14.4 48.8 15.4 50.6 15.4H52.6V13.4H50.9001C50.2001 13.4 49.8 13 49.8 12.3V0H47.8V12.7Z"/>
+       <path d="M28.9 19.7C28 18.6 26.7 17.9 25 17.9C21.9 17.9 19.6 20.2 19.6 23.5C19.6 26.8 21.9 29.1 25 29.1C26.8 29.1 28 28.3 28.8 27.2H28.9V28.8H30.9V18.2H28.9V19.7ZM25.3 27.1C23.1 27.1 21.7 25.5 21.7 23.5C21.7 21.5 23.1 19.9 25.3 19.9C27.5 19.9 28.9 21.5 28.9 23.5C28.9 25.4 27.5 27.1 25.3 27.1Z"/>
+       <path d="M44.2 22C43.7 19.6 41.5999 17.9 38.7999 17.9C35.3999 17.9 33.2 20.4 33.2 23.5C33.2 26.6 35.3999 29.1 38.7999 29.1C41.5999 29.1 43.7 27.3 44.2 24.9H42.0999C41.6999 26.2 40.3999 27.2 38.7999 27.2C36.5999 27.2 35.2 25.6 35.2 23.6C35.2 21.6 36.5999 20 38.7999 20C40.3999 20 41.5999 21 42.0999 22.2H44.2V22Z"/>
+       <path d="M55.1 19.7C54.2 18.6 52.9001 17.9 51.2001 17.9C48.1001 17.9 45.8 20.2 45.8 23.5C45.8 26.8 48.1001 29.1 51.2001 29.1C53.0001 29.1 54.2 28.3 55 27.2H55.1V28.8H57.1V18.2H55.1V19.7ZM51.5 27.1C49.3 27.1 47.9001 25.5 47.9001 23.5C47.9001 21.5 49.3 19.9 51.5 19.9C53.7 19.9 55.1 21.5 55.1 23.5C55.1 25.4 53.6 27.1 51.5 27.1Z"/>
+       <path d="M68.7 19.8C67.8 18.7 66.5 17.9 64.8 17.9C61.7 17.9 59.4 20.2 59.4 23.5C59.4 26.8 61.6 29.1 64.8 29.1C66.5 29.1 67.8 28.3 68.6 27.3H68.7V28.8H70.7V13.4H68.7V19.8ZM65.1 27.1C62.9 27.1 61.5 25.5 61.5 23.5C61.5 21.5 62.9 19.9 65.1 19.9C67.3 19.9 68.7 21.5 68.7 23.5C68.6 25.5 67.2 27.1 65.1 27.1Z"/>
+       <path d="M78.3 17.9C75 17.9 72.8 20.4 72.8 23.5C72.8 26.5 74.9 29.1 78.3 29.1C80.8 29.1 82.8 27.8 83.5 25.5H81.4C80.9 26.5 79.8 27.1 78.4 27.1C76.5 27.1 75.1 25.8 75 24.2H83.8C84 20.6 81.8 17.9 78.3 17.9ZM78.3 19.8C80 19.8 81.3 20.8 81.6 22.4H75.1C75.4 20.9 76.6 19.8 78.3 19.8Z"/>
+       <path d="M98.2 17.9C96.6 17.9 95.3 18.7 94.6 19.9H94.5C93.9 18.7 92.7 17.9 91.1 17.9C89.7 17.9 88.6 18.6 88 19.7V18.2H86.1V28.8H88.1V23.4C88.1 21.4 89.1 20 90.7 19.9C92.2 19.9 93.1 20.9 93.1 22.5V28.8H95.1V23.2C95.1 20.8 96.5 19.9 97.7 19.9C99.2 19.9 100.1 20.9 100.1 22.5V28.8H102.1V22.3C102.2 19.7 100.7 17.9 98.2 17.9Z"/>
+       <path d="M109.4 27L105.8 18.1H103.6L108.4 29.7C108.1 30.6 107.7 30.9 106.7 30.9H104.2V32.9H106.7C108.5 32.9 109.5 32.1 110.2 30.3L114.9 18.1H112.8L109.4 27Z"/>
+       </svg>
+
+    </a>
+  </section>
   </div>
   </footer>
      </div>
